change behavior to prevent ellipsis for text-overflow on definition term

--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,10 @@ dd {
   margin-bottom: 1em;
 }
 
+dt {
+  white-space: inherit !important;
+}
+
 // Icons
 .icon {
 
